@@ -385,6 +385,11 @@ name|BatchUpdate
 argument_list|>
 name|batch
 decl_stmt|;
+specifier|protected
+specifier|volatile
+name|boolean
+name|tableDoesNotExist
+decl_stmt|;
 comment|// For row mutation operations
 specifier|protected
 specifier|volatile
@@ -396,6 +401,21 @@ name|void
 name|checkClosed
 parameter_list|()
 block|{
+if|if
+condition|(
+name|tableDoesNotExist
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalStateException
+argument_list|(
+literal|"table does not exist: "
+operator|+
+name|tableName
+argument_list|)
+throw|;
+block|}
 if|if
 condition|(
 name|closed
@@ -424,6 +444,10 @@ throws|throws
 name|IOException
 block|{
 name|closed
+operator|=
+literal|true
+expr_stmt|;
+name|tableDoesNotExist
 operator|=
 literal|true
 expr_stmt|;
@@ -480,15 +504,6 @@ operator|new
 name|Random
 argument_list|()
 expr_stmt|;
-name|tableServers
-operator|=
-name|connection
-operator|.
-name|getTableServers
-argument_list|(
-name|tableName
-argument_list|)
-expr_stmt|;
 name|this
 operator|.
 name|batch
@@ -499,6 +514,19 @@ argument_list|<
 name|BatchUpdate
 argument_list|>
 argument_list|()
+expr_stmt|;
+name|tableServers
+operator|=
+name|connection
+operator|.
+name|getTableServers
+argument_list|(
+name|tableName
+argument_list|)
+expr_stmt|;
+name|tableDoesNotExist
+operator|=
+literal|false
 expr_stmt|;
 name|closed
 operator|=
@@ -2385,13 +2413,15 @@ block|{
 name|checkClosed
 argument_list|()
 expr_stmt|;
-name|updateInProgress
-argument_list|(
-literal|true
-argument_list|)
-expr_stmt|;
 if|if
 condition|(
+name|batch
+operator|.
+name|get
+argument_list|()
+operator|!=
+literal|null
+operator|&&
 name|batch
 operator|.
 name|get
