@@ -91,6 +91,18 @@ specifier|private
 specifier|static
 specifier|final
 name|Text
+name|nosuchTable
+init|=
+operator|new
+name|Text
+argument_list|(
+literal|"nosuchTable"
+argument_list|)
+decl_stmt|;
+specifier|private
+specifier|static
+specifier|final
+name|Text
 name|tableAname
 init|=
 operator|new
@@ -131,6 +143,51 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{
+name|byte
+index|[]
+name|value
+init|=
+literal|"value"
+operator|.
+name|getBytes
+argument_list|(
+name|UTF8_ENCODING
+argument_list|)
+decl_stmt|;
+try|try
+block|{
+operator|new
+name|HTable
+argument_list|(
+name|conf
+argument_list|,
+name|nosuchTable
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|TableNotFoundException
+name|e
+parameter_list|)
+block|{
+comment|// expected
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+name|e
+operator|.
+name|printStackTrace
+argument_list|()
+expr_stmt|;
+name|fail
+argument_list|()
+expr_stmt|;
+block|}
 name|HTableDescriptor
 name|tableAdesc
 init|=
@@ -194,17 +251,6 @@ name|tableBdesc
 argument_list|)
 expr_stmt|;
 comment|// put some data into table A
-name|byte
-index|[]
-name|value
-init|=
-literal|"value"
-operator|.
-name|getBytes
-argument_list|(
-name|UTF8_ENCODING
-argument_list|)
-decl_stmt|;
 name|HTable
 name|a
 init|=
@@ -372,6 +418,13 @@ block|}
 name|b
 operator|.
 name|commit
+argument_list|(
+name|lockid
+argument_list|)
+expr_stmt|;
+name|b
+operator|.
+name|abort
 argument_list|(
 name|lockid
 argument_list|)
